Добавил конфигурацию, Product, ProductRepository, ProductService, ProductController Немного изменил конфигурацию  и сущность User